# OpenGL_template

./: .gitignore  .gitmodules  CMakeLists.txt  Session.vim  build.bat  build.sh  build_and_run.bat  compile.sh  fs.glsl  readme.md  run.bat
examples/: CMakeLists.txt  basic_vertex_shader.glsl  minimal_triangle.cpp  uniform_api.cpp  uniform_fragment_shader.glsl
examples/cubic_bezier/: cubic_bezier.cpp  cubic_bezier_fs.glsl  cubic_bezier_gs.glsl  cubic_bezier_vs.glsl
examples/minimal_triangle/: basic_fragment_shader.glsl  fs.glsl  minimal_triangle.cpp
examples/uniform_api/: uniform_vertex_shader.glsl
lib/glew-2.1.0/: glew.pc
src/: main.cpp  test.cpp
